client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
.dataFilesModalColHeader {
  font-weight: bold;
  padding-bottom: 10px;
}

.dataFilesModal {
    color: #484848;
    padding: 20px;
    .h-100 {
        padding: 0 10px 0 10px;
    }
    .modal-header {
        background-color: #F4F4F4;
        padding: 1.3rem;
    }
    .breadcrumbs {
      font-size: 12px;
      padding-top: 5px;
      padding-bottom: 5px;
      color: #707070;
    }
    .filesListing {
      flex-grow: 1;
      outline: 1px solid #707070;
    }
    .tr-header {
        border-bottom-color: #C6C6C6;
    }

    /* Overrides tr font-size for modals (being defined in DataFilesTable.scss */
    .tr {
      font-size: 12px;
    }

    /* Overrides bootstrap button */
    .btn {
      font-size: 12px;
    }

    /* Overrides bootstrap modal tittle */
    .modal-title {
      font-size: 18px;
    }

    .InfiniteScrollTable.projects-listing {
      th {
        color: #484848;
      }
      th,
      td {
        display: flex;
        align-items: center;
        font-size: 12px;
        padding: 5px 15px;
      }
      td {
        height: 45px;
      }
    }
}

/* Quick port of inline style to stylesheet */
.dataFilesValidationMessage {
  padding-top: 10px;
}

